Fixed overflow

--- a/CSS/promo-gallery.css
+++ b/CSS/promo-gallery.css
@@ -16,12 +16,13 @@ html, body {
   .gallery-top {
     height: 100vh;
     width: 100%;
+    overflow: hidden;
   }
     
   
   .teaserText {
-    margin-left: 8rem;
-    max-width: 40%;
+    margin-left: 5rem;
+    max-width: 55%;
     position:relative;
     background-color: rgba(255, 255, 255, 0.749);
   }
