--- a/CSS/testimonials.css
+++ b/CSS/testimonials.css
@@ -83,7 +83,8 @@
     height: 40vh;
   }
   .snip1533 p{
-      font-size: .5em;
+    padding-top: 2vh;
+      font-size: .4em;
   }
 
   .snip1533 figcaption:before{
@@ -91,6 +92,24 @@
   }
 
 }
+
+
+@media only screen and (min-width: 375px) {
+  .snip1533{
+    max-height: 55vh;
+    min-width: 22vw;
+    height: 40vh;
+  }
+  .snip1533 p{
+      font-size: .5em;
+  }
+
+  .snip1533 figcaption:before{
+    font-size: 20px;
+  }
+
+}
+
 
 
 @media only screen and (min-width: 375px) {
